[package]
name = "connect_4"
version = "0.2.0"
authors = ["Wannes Malfait <wannes.malfait@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
panic = 'abort'

[profile.dev]
opt-level = 3
debug-assertions = true

[dependencies]
